--- a/Two-Way ANOVA.html
+++ b/Two-Way ANOVA.html
@@ -201,8 +201,8 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./Working with R Markdown.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">Working with R Markdown</span></a>
+  <a href="./Working with Quarto.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Working with Quarto</span></a>
   </div>
 </li>
       </ul>
